Clean css and html

--- a/younotes1/1.1-motivation-philosophy.html
+++ b/younotes1/1.1-motivation-philosophy.html
@@ -16,9 +16,13 @@
     <a class="next" title="Next" href="1.2-what-is-a-category.html">&rarr;</a>
 </nav>
 
+<header>
 <h1>1.1: Motivation and Philosophy</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=I8LbkfSSR58">this youtube video</a></div>
+</header>
+
+<article>
+
 
 <br>Is category theory useful only for functional programming ?
 <br>
@@ -63,5 +67,6 @@ With abstraction and composability comes the idea of <b>reusability</b>.
 
 <!-- ********************************************************************************* -->
 <!-- ************************************* -->
+</article>
 </body>
 </html>
