--- a/younotes1/1.2-what-is-a-category.html
+++ b/younotes1/1.2-what-is-a-category.html
@@ -17,9 +17,13 @@
 </nav>
 
 
+<header>
 <h1>1.2: What is a category ?</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=p54Hd7AmVFU">this youtube video</a></div>
+</header>
+
+<article>
+
 
 <br>The major tools we have at our disposition are :
 <ul>
@@ -136,5 +140,6 @@ Some theories were deveoped where associativity is weak (both terms of the assoc
 <!-- ********************************************************************************* -->
 <!-- ************************************* -->
 
+</article>
 </body>
 </html>
