--- a/younotes1/10.1-monads.html
+++ b/younotes1/10.1-monads.html
@@ -17,11 +17,16 @@
 </nav>
 
 
+<header>
 <h1>10.1: Monads</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=gHiyzctYqZ0">this youtube video</a></div>
+</header>
+
+<article>
 
 
 
+
+</article>
 </body>
 </html>
