--- a/younotes1/10.2-monoid-in-the-category-of-endofunctors.html
+++ b/younotes1/10.2-monoid-in-the-category-of-endofunctors.html
@@ -16,11 +16,16 @@
 </nav>
 
 
+<header>
 <h1>10.2: Monoid in the category of endofunctors</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=GmgoPd7VQ9Q">this youtube video</a></div>
+</header>
+
+<article>
 
 
 
+
+</article>
 </body>
 </html>
