--- a/younotes1/2.2-monomorphisms-simple-types.html
+++ b/younotes1/2.2-monomorphisms-simple-types.html
@@ -17,16 +17,20 @@
 </nav>
 
 
+<header>
 <h1>2.2: Monomorphisms, simple types</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=NcT7CGPICzo">this youtube video</a></div>
+</header>
+
+<article>
+
 
 <!-- ********************************************************************************* -->
 <h2>Monorphisms</h2>
 
 A non-injective function will map two elements <code>x<sub>1</sub></code> and <code>x<sub>2</sub></code> of set <code>a</code> to the same element <code>y</code> of set <code>b</code>.
 
-<img class="margin" src="img/monomorphism.jpg" alt="Monomorphism">
+<img class="margin border" src="img/monomorphism.jpg" alt="Monomorphism">
 
 <br>If we consider functions <code>g<sub>1</sub></code> and <code>g<sub>2</sub></code> from <code>c</code> to <code>a</code>, equal except in <code>z</code> : <code>g<sub>1</sub>(z) = x<sub>1</sub></code> and <code>g<sub>2</sub>(z) = x<sub>2</sub></code>.
 <br>Here we have <code>g<sub>1</sub></code> different from <code>g<sub>2</sub></code> but <code>f o g<sub>1</sub> = f o g<sub>2</sub></code>
@@ -91,5 +95,6 @@ A two element set is equivalent to type <code>Bool</code>. We'll see later that 
 
 <!-- ********************************************************************************* -->
 <!-- ************************************* -->
+</article>
 </body>
 </html>
