--- a/younotes1/8.1-function-objects-exponentials.html
+++ b/younotes1/8.1-function-objects-exponentials.html
@@ -17,10 +17,15 @@
 </nav>
 
 
+<header>
 <h1>8.1: Function objects, exponentials</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=REqRzMI26Nw">this youtube video</a></div>
+</header>
+
+<article>
 
 
+
+</article>
 </body>
 </html>
