--- a/younotes1/8.2-type-algebra-curry-howard-lambek-isomorphism.html
+++ b/younotes1/8.2-type-algebra-curry-howard-lambek-isomorphism.html
@@ -17,9 +17,14 @@
 </nav>
 
 
+<header>
 <h1>8.2: Type algebra, Curry-Howard-Lambek isomorphism</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=iXZR1v3YN-8">this youtube video</a></div>
+</header>
 
+<article>
+
+
+</article>
 </body>
 </html>
