--- a/younotes1/9.2-bicategories.html
+++ b/younotes1/9.2-bicategories.html
@@ -17,10 +17,15 @@
 </nav>
 
 
+<header>
 <h1>9.2: bicategories </h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=wrpxBXXgLCI">this youtube video</a></div>
+</header>
+
+<article>
 
 
+
+</article>
 </body>
 </html>
