--- a/younotes1/3.2-kleisli-category.html
+++ b/younotes1/3.2-kleisli-category.html
@@ -17,10 +17,15 @@
 </nav>
 
 
+<header>
 <h1>3.2: Kleisli category</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=i9CU4CuHADQ">this youtube video</a></div>
+</header>
 
+<article>
+
+
+<!-- ********************************************************************************* -->
 <h2>Inclusion</h2>
 
 This deals with an interesting case to study.
@@ -34,13 +39,14 @@ This deals with an interesting case to study.
 <br>This is a partial order because there may be loops : <span class="formula">if a &sube; b &#8896; b &sube; a &rArr; a = b</span>.
 <br>This is not a total order because there may exist disjoint sets or sets that partially overlap.
 <br>We can have a diamond situation : 
-<div>
-    <img src="img/diamond1.jpg" alt="" />
-    <img src="img/diamond2.jpg" alt="" />
+<div class="flex-wrap">
+    <img class="margin border" src="img/diamond1.jpg" alt="" />
+    <img class="margin border" src="img/diamond2.jpg" alt="" />
 </div>
 
 We have a category based on sets where the arrows are not functions, but relations. Some versions of this category is used in modeling topology ; open sets have this property of inclusion.
 
+<!-- ********************************************************************************* -->
 <h2>Kleisli category</h2>
 
 This is a category based on the category of types and functions.
@@ -48,20 +54,20 @@ This is a category based on the category of types and functions.
 <br>We maintain a library of functions and a new requirement comes : every function must be auditable : every function has to create a log "I was called".
 <br>The simplest solution that comes to mind of imperative programmers is creating a global log.
 So we have in C++
-<div><pre>string log = "";</pre></div>
+<pre>string log = "";</pre>
 If we have a function 
-<div><pre>
+<pre>
 bool negate(bool x){
     return !x;
 }
-</pre></div>
+</pre>
 To add a trace in the log, we can modify it :
-<div><pre>
+<pre>
 bool negate(bool x){
     log += "not!";
     return !x;
 }
-</pre></div>
+</pre>
 
 This looks simple, but is it really simple ?
 <br>It introduces a <i>hidden dependency</i> between the bodies of our functions a the global log.
@@ -76,11 +82,11 @@ This looks simple, but is it really simple ?
 <br>This could not happen in Haskell as all functions are supposed to be pure.
 <br>In C++, this could be implemented as a pure function :
 
-<div><pre>
+<pre>
 pair&lt;bool,string> negate(bool x, string log){
     return make_pair(!x, log + "not!");
 }
-</pre></div>
+</pre>
 
 OK, this function is pure, there is no side effects, but it's a bit awkward :
 <ul>
@@ -96,11 +102,11 @@ OK, this function is pure, there is no side effects, but it's a bit awkward :
 </ul>
 
 This solution would resolve the preceeding issues :
-<div><pre>
+<pre>
 pair&lt;bool,string> negate(bool x){
     return make_pair(!x, "not!");
 }
-</pre></div>
+</pre>
 
 But then who does the concatenation of the log ?
 <br>What do we do with these functions ? We compose them.
@@ -109,7 +115,7 @@ But then who does the concatenation of the log ?
 <br>
 <br>Let's define a new way of composing functions that will take care of composing functions that return these pairs.
 <br>With regular composition, we would write :
-<div><pre>
+<pre>
 function &lt;c(a)> compose(function&lt;b(a)> f, function&lt;c(b)> g){
     return [f, g](a x){
         auto p1 = f(x);
@@ -117,7 +123,7 @@ function &lt;c(a)> compose(function&lt;b(a)> f, function&lt;c(b)> g){
         return p2;
     }
 }
-</pre></div>
+</pre>
 
 <ul>
     <li>
@@ -137,7 +143,8 @@ function &lt;c(a)> compose(function&lt;b(a)> f, function&lt;c(b)> g){
 That's a higher order function, something new in C++ and java, having functions as arguments and returning function and creating them on the spot.
 <br>
 <br>But we want functions that return pairs (embellished functions)
-<div><pre>
+
+<pre>
 function &lt;pair&lt;c, string>(a)> compose(function&lt;pair&lt;b, string>(a)> f, function&lt;pair&lt;c, string>(b)> g){
     return [f, g](a x){
         auto p1 = f(x);     // p1 is a pair now
@@ -145,7 +152,7 @@ function &lt;pair&lt;c, string>(a)> compose(function&lt;pair&lt;b, string>(a)> f
         return make_pair(p2.first, p1.second + p2.second); // log concatenation done here
     }
 }
-</pre></div>
+</pre>
 
 This new way of composing function takes care of appending the log.
 <br>
@@ -157,11 +164,11 @@ This new way of composing function takes care of appending the log.
     </li>
     <li>
         Identity is
-<div><pre>
+<pre>
 function pair&lt;a, string> id(a x){
     return make_pair(x, "");
 }
-</pre></div>
+</pre>
         String concatenation is a binary operator that is associative and has a unit. So this works for any monoid.
     </li>
 </ul>
@@ -176,5 +183,6 @@ So we have a category whose objects are types a, b, c... and arrows are not regu
 
 <!-- ********************************************************************************* -->
 <!-- ************************************* -->
+</article>
 </body>
 </html>
