--- a/younotes1/5.1-coproducts-sum-types.html
+++ b/younotes1/5.1-coproducts-sum-types.html
@@ -17,16 +17,21 @@
 </nav>
 
 
+<header>
 <h1>5.1: Coproducts, sum types</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=LkIRsNj9T-8">this youtube video</a></div>
+</header>
 
+<article>
+
+
+<!-- ********************************************************************************* -->
 <h2>Coproduct</h2>
 
 The coproduct is the <b>dual</b> of the product. The dual is the same thing but in the opposite category.
 <br>So we build the product diagram reverting the arrows :
 
-<img src="img/product4.jpg" alt="Cartesian product 4">
+<img class="margin border" src="img/product4.jpg" alt="Cartesian product 4">
 
 Instead of having projections <code>p</code> and <code>q</code>, we have <b>injections</b> <code>i</code> and <code>j</code>.
 <br>So this is the pattern : we fix two objects <code>a</code> and <code>b</code>. An object <code>c</code> will match this pattern if it has two arrows coming to it from <code>a</code> and <code>b</code>.
@@ -38,13 +43,14 @@ i' = m o i
 <br>j' = m o j
 </div>
 
+<!-- ************************************* -->
 <h3>In terms of functions</h3>
 
 What does coproduct mean in set theory ?
 <br>The fact that we have thes injection means that we are embedding the sets <code>a</code> and <code>b</code> into <code>c</code>.
 <br>Functions can shrink things, or not cover their whole codomain, they can be non injective or non surjective ; but we want <code>i</code> and <code>j</code> to be the best fit. We want to embed exactly <code>a</code> and <code>b</code> into <code>c</code>, no more and no less. This is just like the <b>union</b> of <code>a</code> and <code>b</code>.
 
-<img src="img/union.jpg" alt="Union">
+<img class="margin border" src="img/union.jpg" alt="Union">
 
 Every universal construction permits to build the best possible fit, it picks an ideal match.
 
@@ -52,14 +58,15 @@ But what happens when they overlap ? Or when <code>a</code> = <code>b</code> ?
 <br>The union of a set with itself is the set itself. But there is an other possibility : the <b>discrimated union</b> ; we tag the elements in the discrimated union : this element comes from the left one, this element comes from the right one ; the set is duplicated.
 <br><code>c</code> is in fact a discrimated union because we can easily build a morphism <code>m</code> from discriminated union to union ; <code>m</code> is unique and non-injective.
 
-<img src="img/discriminated-union1.jpg" alt="Discriminated Union">
+<img class="margin border" src="img/discriminated-union1.jpg" alt="Discriminated Union">
 
 And we could not go the other way round.
 
-<img src="img/discriminated-union2.jpg" alt="Discriminated Union 2">
+<img class="margin border" src="img/discriminated-union2.jpg" alt="Discriminated Union 2">
 
 Each element <code>x</code> should be mapped twice, a function can't do that.
 
+<!-- ************************************* -->
 <h3>In terms of types</h3>
 
 Called a <b>tagged union</b> or <b>variant</b>.
@@ -76,6 +83,7 @@ Called a <b>tagged union</b> or <b>variant</b>.
 In coproduct we have functions which construct an <code>Either</code>. But can we extract stuff from an <code>Either</code> ?
 <br>If we have an <code>x :: Either Int Bool</code>, to extract an Int, we need to write code that takes into account both possibilities, that will match either Right or Left ; this is called <b>pattern matching</b> ; Left and right are patterns.
 
+<!-- ********************************************************************************* -->
 <h2>The type system</h2>
 
 Now that we have product type, sum type, unit type, void, we have pretty much of the foundations of the type system.
@@ -83,14 +91,14 @@ Now that we have product type, sum type, unit type, void, we have pretty much of
 <br>Product types are the most visible ones, they may be built-in in Haskell or defined with generics in C++.
 <br>All these constructs in Haskell are equivalent to a product : they store two floats, no more and no less.
 
-<div><pre>
+<pre>
 data Point = (Float, FLoat)
 data Point = P Float Float
 data Point{
     x :: Float,
     y :: Float
 }
-</pre></div>
+</pre>
 
 <br>Why are these called products and sums ?
 <br>A product comes from cartesian product, so it's undersandable.
@@ -99,5 +107,6 @@ data Point{
 
 <!-- ********************************************************************************* -->
 <!-- ************************************* -->
+</article>
 </body>
 </html>
