--- a/younotes1/9.1-natural-transformations.html
+++ b/younotes1/9.1-natural-transformations.html
@@ -17,9 +17,14 @@
 </nav>
 
 
+<header>
 <h1>9.1: Natural transformations</h1>
-
 <div>Notes from <a href="https://www.youtube.com/watch?v=2LJC-XD5Ffo">this youtube video</a></div>
+</header>
 
+<article>
+
+
+</article>
 </body>
 </html>
